@@ -1,3 +1,8 @@
+2013-02-25  Donal K. Fellows  <dkf@users.sf.net>
+
+	* tests/binary.test (binary-41.*): [Bug 3605721]: Test independence
+	fixes. Thanks to Rolf Ade for pointing out the problem.
+
 2013-02-25  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/assocd.test:	[Bugs 3605719,3605720] Test independence.
